feat: add Next.js frontend with Web3 integration
- Complete Next.js 15 + TypeScript + Tailwind setup
- Web3 stack: wagmi v2 + RainbowKit + Alchemy SDK
- Frontend structure: components, layouts, providers
- Header component with wallet connection
- Multi-chain support: ANVIL + Sepolia + Mainnet
- Working localhost:3000 with NFT Collection Viewer

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,19 @@ broadcast/
 .DS_Store
 Thumbs.db
 *.log
+
+# Next.js
+nft-frontend/.next/
+nft-frontend/out/
+nft-frontend/node_modules/
+nft-frontend/*.tsbuildinfo
+nft-frontend/next-env.d.ts
+
+# Environment variables
+nft-frontend/.env*.local
+
+
+/out/
+next-env.d.ts
+*.tsbuildinfo
+node_modules/
