--- a/nft-frontend/package.json
+++ b/nft-frontend/package.json
@@ -12,20 +12,25 @@
   "dependencies": {
     "@radix-ui/react-dialog": "^1.1.0",
     "@radix-ui/react-dropdown-menu": "^2.1.0",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-progress": "^1.1.7",
+    "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-toast": "^1.2.0",
     "@rainbow-me/rainbowkit": "^2.1.0",
     "@tanstack/react-query": "^5.56.0",
     "alchemy-sdk": "^3.6.3",
     "autoprefixer": "^10.4.0",
-    "clsx": "^2.1.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "lucide-react": "^0.445.0",
     "next": "^15.0.0",
     "next-themes": "^0.3.0",
     "postcss": "^8.4.0",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
-    "tailwind-merge": "^2.5.0",
+    "tailwind-merge": "^2.6.0",
     "tailwindcss": "^3.4.0",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.6.0",
     "viem": "^2.21.0",
     "wagmi": "^2.12.0"
